Fix demo button 2 spacing

--- a/lvlup-frontend/src/App.css
+++ b/lvlup-frontend/src/App.css
@@ -48,7 +48,7 @@ body,
 }
 
 #content-col {
-  padding: 60px 80px !important;
+  padding: 60px 80px 0px 80px !important;
 }
 
 .errorMessage {
