--- a/lvlup-frontend/src/components/Home/homeview.css
+++ b/lvlup-frontend/src/components/Home/homeview.css
@@ -109,7 +109,7 @@
 
 .demo-section2 {
   padding-top: 45px;
-  padding-bottom: 90px;
+  padding-bottom: 30px;
 }
 
 div.description {
